Adicionei imagens para os filmes que gosto, além de ter falado um pouco sobre eles; Fiz uma seção de contatos ; Adicionei as cores do background.

--- a/structure.html
+++ b/structure.html
@@ -8,59 +8,80 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <img scr=
-      <a href="https://portal.cin.ufpe.br/">Local de Estudo </a>
+    <header class="header_links">
+      <a href="https://portal.cin.ufpe.br/">Local de Estudo </a> 
       <a href="https://github.com/Beatriz-dos-Anjos">Repositórios no GitHub </a>
       <a href="https: //www.instagram.com/beatriz042005/"> Instagram </a>
       <a
         href="https://www.linkedin.com/in/beatriz-mergulh%C3%A3o-dos-anjos-1a6266268/"
         >Linkedin
       </a>
-    </header>
-    <h1>Beatriz Mergulhão dos Anjos</h1>
-    <header>
-      <img src="profile.png" width="200" height="200" alt="profile pic" class="profile_round" />
-    </header>
-    <p>
-      Olá, pessoal! Sou Beatriz Mergulhão dos Anjos, estou no segundo período de
-      Sistemas de Informação, no CIn - e estou aprendendo muito nesta etapa do
-      processo seletivo do Citi. Quer me conhecer mais?
-    </p>
-    <h3>Hobbies</h3>
-    <h4>Programar</h4>
-    <img src="dev1_profile.png" width="200" height="200" alt="dev pic" class="volei_style" />
-    <p>
-      Gosto muito do ambiente de desenvolvimento na web e tenho práticas de
-      python (com projeto) e portugol (pseudocódigo) - essa página na web está sendo meu segundo contato com html, mas o que foi pedido era parecido com esse desafio.
-    </p>
-    <p>
-      <h4> Tocar piano </h4>
-      <img src="piano_profile.jpg" width="200" height="200" alt="profile pic" class="volei_style"/>
-    </p>
+    </header >
+    <header class="background_main">
 
-    <p>
-      Adoro tocar piano. Fiz aulas durante 4 anos quando era mais nova, e agora
-      continuo a praticar com meu piano - me faz relaxar e raciocinar ao mesmo
-      tempo.
-    </p>
-    <p>
-      <h4> Jogar voleibol </h4>
+      <h1>Beatriz Mergulhão dos Anjos</h1>
+        <img src="profile.png" width="200" height="200" alt="profile pic" class="profile_round" />
 
-      <img
-        src="girl-with-volley-ball.jpg"
-        width="200"
-        height="200"
-        alt="profile pic"
-        class="volei_style"
-      />
-    </p>
-    <p>
-      Amoo jogar vôlei. Pratiquei por 6 anos, mas já que não queria entrar no
-      profissional (quando me foi dada a oportunidade) achei melhor parar-
-      apesar de ser algo que quero voltar e é a melhor atividade do mundo para
-      se fazer com um grupo de pessoas, perfeito! Não preciso dizer que também
-      amo jogo de vôlei , e sempre que posso, estou assistindo.
-    </p>
+      <p>
+        Olá, pessoal! Sou Beatriz Mergulhão dos Anjos, estou no segundo período de
+        Sistemas de Informação, no CIn - e estou aprendendo muito nesta etapa do
+        processo seletivo do Citi. Quer me conhecer mais?
+      </p>
+      <h3 class="titulo_back">Hobbies</h3>
+      <div class="hobbies-container">
+        <div class="hobby">
+           <h4> Programar</h4>
+          <img src="dev2_profile.png" width="200" height="200" alt="dev pic" class="volei_style" />
+          <p>
+            Gosto muito do ambiente de desenvolvimento na web e tenho práticas de
+            python (com projeto) e portugol (pseudocódigo) - essa página na web está sendo meu segundo contato com html, mas o que foi pedido era parecido com esse desafio.
+          </p>
+        </div>
+        <div class="hobby">
+          <h4> Tocar piano </h4>
+          <img src="piano_profile.jpg" width="200" height="200" alt="profile pic" class="volei_style"/>
+          <p> Adoro tocar piano. Fiz aulas durante 4 anos quando era mais nova, e agora
+              continuo a praticar com meu piano - me faz relaxar e raciocinar ao mesmo
+              tempo.</p></div>
+        <div class="hobby">
+          <h4> Jogar voleibol </h4>
+          <img
+          src="girl-with-volley-ball.jpg"
+          width="200"
+          height="200"
+          alt="profile pic"
+          class="volei_style" />
+          <p>
+            Amo jogar vôlei. Pratiquei por 6 anos, mas já que não queria entrar no
+            profissional (quando me foi dada a oportunidade) achei melhor parar-
+            apesar de ser algo que quero voltar e é a melhor atividade do mundo para
+            se fazer com um grupo de pessoas, perfeito! Não preciso dizer que também
+            amo jogo de vôlei , e sempre que posso, estou assistindo.
+          </p></div>
+
+        </div>
+  <h3 class="titulo_back">Melhores filmes e séries para me conhecer!</h3>
+        <div class="midias_video">
+          <img src="laland_154x222.png" widht ="100" height ="100" alt="try on lalaland" />
+          <p> o cenário de Hollywood é o palco dos sonhos de Mia, uma aspirante a atriz, e Sebastian, um músico que quer tornar o Jazz mais conhecido. Seus mundos se cruzam e, apesar de terem sido muito importantes para tentar o sucesso, percebem que ele só consegue ser obtido - nas suas áreas - com eles separados. triste, mas verdade k. </p>
+        </div>
+        <div class="midias_video">
+          <img src="Poster_A_Bela_e_a_Fera_160x227.png" widht="100" height="100" alt = "try on beauty and the beast" />
+          <p>meu filme favorito de princesas. a história não precisa ser contada, porque é impossível não conhecer rsrs. Adoro o castelo, o vilarejo da Bela, as músicas e como ela gosta de livros ( assim como eu). sei que esse é clássico para ser o favorito, mas eu realmente adoro! pintava a unha na pandemia sempre vendo o filme ( sim, demorava muito porque eu era ruim). Be our guest! </p>
+        </div>
+        <div class="midias_video">
+          <img src="globetoffire_160x235.png" width="100" height="100" alt = "try on hp" />
+          <p> <br>não poderia faltar o melhor filme de hp! Esse é o melhor para mim porque amo a quantidade de coisas e dinâmica que tem nele, além da surpresa final. Gosto muito da entrada das escolas e como o Harry precisa se virar ao ser colocado, mesmo que de forma forçada, nessa situação . . . <br> </p>
+        </div>
+        <div class="midias_video">
+          <img src="lotr_160x240.jpeg" widht="100" height="100" alt="try oh lotr" />
+          <p> apesar de existir há mais tempo que eu no mundo rsrsrs, no ano passado me peguei viciada na trilogia, no Hobbit ... e na parte mais densa, os livros. Os mundos de Tolkien são perfeitos e cheios de alegorias. </p>
+        </div>
+
+
+<header class= "background_down">
+    <h3> Quer falar comigo? </h3>
+    <h4> Email </h4> <p>  bma3@cin.ufpe.br <br> beatriz.anjos@ufpe.br </p> 
+    
   </body>
 </html>
