Final update on the project

--- a/structure.html
+++ b/structure.html
@@ -5,21 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML + CSS</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header_links">
-      <a href="https://portal.cin.ufpe.br/">Local de Estudo </a> 
-      <a href="https://github.com/Beatriz-dos-Anjos">Repositórios no GitHub </a>
-      <a href="https: //www.instagram.com/beatriz042005/"> Instagram </a>
-      <a
-        href="https://www.linkedin.com/in/beatriz-mergulh%C3%A3o-dos-anjos-1a6266268/"
-        >Linkedin
+      <div class= "box_header">
+        <a href="https://portal.cin.ufpe.br/"> 
+          <img src="cinufpe_logo.jpg" width="100" height="100" alt="logo cin" class="midias_video" />
+        </a>
+      </div>
+      <div class=box_header>
+        <a href="https://github.com/Beatriz-dos-Anjos">         
+          <img src="git symbol.png" width="100" height="100" alt="logo cin" class="midias_video" />
+        </a>
+      </div>
+      <div class="box_header">
+        <a href="https: //www.instagram.com/beatriz042005/">         <img src="Captura de tela_20240503_130222.png" width="170" height="100" alt="insta profile" class="midias_video" />
+        </a>
+      </div>
+      <div class=box_header>
+        <a href="https://www.linkedin.com/in/beatriz-mergulh%C3%A3o-dos-anjos-1a6266268/"
+        >        <img src="Captura de tela_20240503_130443.png" width="100" height="100" alt="linkedin profile" class = "midias_video" />
       </a>
+      </div>
     </header >
     <header class="background_main">
 
-      <h1>Beatriz Mergulhão dos Anjos</h1>
+      <h1 class="chewy-regular">Beatriz Mergulhão dos Anjos</h1>
         <img src="profile.png" width="200" height="200" alt="profile pic" class="profile_round" />
 
       <p>
@@ -27,7 +42,7 @@
         Sistemas de Informação, no CIn - e estou aprendendo muito nesta etapa do
         processo seletivo do Citi. Quer me conhecer mais?
       </p>
-      <h3 class="titulo_back">Hobbies</h3>
+      <h1 class="chewy-regular">Hobbies</h1>
       <div class="hobbies-container">
         <div class="hobby">
            <h4> Programar</h4>
@@ -42,7 +57,7 @@
           <img src="piano_profile.jpg" width="200" height="200" alt="profile pic" class="volei_style"/>
           <p> Adoro tocar piano. Fiz aulas durante 4 anos quando era mais nova, e agora
               continuo a praticar com meu piano - me faz relaxar e raciocinar ao mesmo
-              tempo.</p></div>
+              tempo. Ahh, e meu estilo vai de clássico até músicas da Taylor.</p></div>
         <div class="hobby">
           <h4> Jogar voleibol </h4>
           <img
@@ -60,7 +75,7 @@
           </p></div>
 
         </div>
-  <h3 class="titulo_back">Melhores filmes e séries para me conhecer!</h3>
+  <h1 class="chewy-regular">Melhores filmes e séries para me conhecer!</h1>
         <div class="midias_video">
           <img src="laland_154x222.png" widht ="100" height ="100" alt="try on lalaland" />
           <p> o cenário de Hollywood é o palco dos sonhos de Mia, uma aspirante a atriz, e Sebastian, um músico que quer tornar o Jazz mais conhecido. Seus mundos se cruzam e, apesar de terem sido muito importantes para tentar o sucesso, percebem que ele só consegue ser obtido - nas suas áreas - com eles separados. triste, mas verdade k. </p>
